raw/RAMADIAN DAFFI 6412 245150200111040/2024-11-14-08-30-24.ceg/compilation.txt
NT.java:28: error: array required, but double found
        hasil[0] += input[1];
                         ^
NT.java:34: error: array required, but double found
            hasil[0] -= input[1];
                             ^
NT.java:40: error: array required, but double found
            hasil[0] *= input[1];
                             ^
NT.java:46: error: array required, but double found
            hasil[0] /= input[1];
                             ^
NT.java:63: error: method output in class NT cannot be applied to given types;
        output(akhir());
        ^
  required: no arguments
  found:    boolean
  reason: actual and formal argument lists differ in length
5 errors
Not compiled
